# dji_tello_Ros2_cv

./: .gitignore  LICENSE  README.md
src/dji_tello_aruco/: CMakeLists.txt  package.xml
src/dji_tello_aruco/src/: aruco_node.cpp
src/dji_tello_interfaces/: CMakeLists.txt  package.xml
src/dji_tello_interfaces/srv/: TelloCmd.srv
src/dji_tello_ros2/: CMakeLists.txt  package.xml
src/dji_tello_ros2/config/: down_camera.yaml  down_camera4ROS.yaml  frontal_camera.yaml  frontal_camera4ROS.yaml
src/dji_tello_ros2/include/dji_tello_Ros2/: telloComunication.hpp  telloInterface.hpp
src/dji_tello_ros2/launch/: launch_dji_tello_ros2.py
src/dji_tello_ros2/src/: gamepad_node.cpp  telloComunication.cpp  telloInterface.cpp  tello_driver_node.cpp
src/dji_tello_yolo/: package.xml  setup.cfg  setup.py
src/dji_tello_yolo/dji_tello_yolo/: yolo_person_node.py
